--- a/S5_casse_briques.css
+++ b/S5_casse_briques.css
@@ -4,10 +4,12 @@ body
 	margin : 0;
 	padding : 0;
 }
+
 #l1, #l2, #l3, #l4
 {
-	clear : right;
+	clear : left;
 }
+
 .violet1
 {
 	width : 10%;
@@ -36,4 +38,26 @@ body
 	background-color : #52046E;
 	float : left;
 }
+
+#balle
+{	
+	position : absolute;
+	bottom : 35px;
+	left : 49.5%;
+	width : 12px;
+	height : 12px;
+	background-color : #4FCEF7;
+}
+#raquette
+{
+	position : absolute;
+	bottom : 6px;
+	left : 44%;	
+	width : 12%;
+	height : 20px;
+	background-color : #FFFFFF;
+}
+
+
+
 
