--- a/S5_casse_briques.css
+++ b/S5_casse_briques.css
@@ -5,38 +5,28 @@ body
 	padding : 0;
 }
 
-#l1, #l2, #l3, #l4
+div[class^="violet"]
 {
-	clear : left;
+	width : 10%;
+	height : 30px;
+	float : left;
 }
 
 .violet1
 {
-	width : 10%;
-	height : 30px;
 	background-color : #F1CFFC;
-	float : left;
 }
 .violet2
 {
-	width : 10%;
-	height : 30px;
 	background-color : #AE56CC;
-	float : left;
 }
 .violet3
 {
-	width : 10%;
-	height : 30px;
 	background-color : #6D2885;
-	float : left;
 }
 .violet4
 {
-	width : 10%;
-	height : 30px;
 	background-color : #52046E;
-	float : left;
 }
 
 #balle
